# ESP32IDF_MQTT

./: .gitignore  CMakeLists.txt  README.md
components/Middlewares/MYFATFS/: CMakeLists.txt  exfuns.c  ff_utils.c  ff_utils.h
components/Middlewares/PICTURE/: CMakeLists.txt  bmp.c  bmp.h  gif.c  gif.h  jpeg.c  jpeg.h  piclib.c  piclib.h  png.c  png.h
components/Middlewares/TEXT/: CMakeLists.txt  fonts.c  fonts.h  text.c  text.h
components/board/: CMakeLists.txt  board.c  board.h
components/bus_drivers/: CMakeLists.txt  iic.c  iic.h  myi2s.c  myi2s.h  spi.c  spi.h
components/devices/: CMakeLists.txt
components/devices/AP3216C/: ap3216c.c  ap3216c.h
components/devices/ES8388/: es8388.c  es8388.h
components/devices/KEY/: key.c  key.h
components/devices/LCD/: lcd.c  lcd.h  lcdfont.h
components/devices/LED/: led.c  led.h
components/devices/QMA6100P/: qma6100p.c  qma6100p.h
components/devices/SPI_SD/: spi_sd.c  spi_sd.h
components/devices/XL9555/: xl9555.c  xl9555.h
main/: CMakeLists.txt  main.c
main/APP/ALS/: als_service.c  als_service.h  ap3216c_task.c  ap3216c_task.h
main/APP/AUDIO/: audio_common.h  audioplay.c  audioplay.h  music_task.c  music_task.h  wavplay.c  wavplay.h
main/APP/CIRCLE/: circle.c  circle.h
main/APP/IMU/: imu_service.c  imu_service.h  qma6100p_task.c  qma6100p_task.h
main/APP/KEY/: key_task.c  key_task.h
main/APP/LCD/: lcd_task.c  lcd_task.h
main/APP/LED/: led_task.c  led_task.h
main/APP/MENU/: menu.c  menu.h
main/APP/MQTT/: onenet_demo.c  onenet_demo.h
main/APP/PIC/: pic_task.c  pic_task.h
