idf_component_register(
    SRC_DIRS 
        "."
        "APP/AUDIO"
        "APP/LED"
        "APP/LCD"
        "APP/MENU"
        "APP/CIRCLE" 
        "APP/PIC"
        "APP/ALS"
        "APP/IMU"
        "APP/KEY"
        "APP/MQTT"
    INCLUDE_DIRS 
        "."
        "APP/AUDIO"
        "APP/LED"
        "APP/LCD"
        "APP/MENU"
        "APP/CIRCLE" 
        "APP/PIC"
        "APP/ALS"
        "APP/IMU"
        "APP/KEY"
        "APP/MQTT"
    REQUIRES
        bus_drivers
        board
        devices
        nvs_flash
        esp_system
        esp_timer
        esp_lcd
        driver
        fatfs 
        TEXT
        MYFATFS
        PICTURE
        mqtt
        esp_wifi
        esp_netif
    )